Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
Description
To improve code quality and to avoid surprise build failures on Windows, we should fix any -Wconversion warnings that are reported by gcc or clang.
gcc appears to be stricter than clang here; it will require explicit bitmask operations to suppress warnings about assignments to bit fields in structs.
As a first step, we should enable -Wconversion in InnoDB and Mariabackup. This will require some headers in include/ and sql/ to be fixed as well. The Mariabackup build also includes some compilation units in libmysqld.
Attachments
Issue Links
- is blocked by
-
MDEV-21924 Clean up InnoDB GIS record comparison
-
- Closed
-
- relates to
-
MDEV-21269 Parallel merging of fts index rebuild fails
-
- Closed
-
-
MDEV-26896 Enable -Wconversion globally
-
- Open
-
-
MDEV-19740 Debug build of 10.3.15 FTBFS
-
- Closed
-