MDEV-21907 WIP (test failures!) Fix some clang -Wconversion outside InnoDB